5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1592_2425.log
== TEST (2019-04-03 15:10:05) 
-- CODE:
dst = float(input("distancia:"))
cbs = float(input("combustivel gasto"))
cm = (dst/cbs)
x = cm + "km/l"
print(round(x,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = cm + "km/l"
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 15:12:08) 
-- CODE:
dst = float(input("distancia:"))
cbs = float(input("combustivel gasto"))
cm = (dst/cbs)
x = cm + "km/l"
print(x)
print(round(x,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = cm + "km/l"
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 15:14:58) 
-- CODE:
dst = float(input("distancia:"))
cbs = float(input("combustivel gasto"))
cm = (dst/cbs)
x = cm + "km/l"
print("x:",x)
print(round(x,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = cm + "km/l"
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 15:16:55) 
-- CODE:
dst = float(input("distancia:"))
cbs = float(input("combustivel gasto"))
cm = (dst/cbs)
x = cm + "km/l"
print("x:",x)
print(round(x,3),"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = cm + "km/l"
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 15:17:41) 
-- CODE:
dst = float(input("distancia:"))
cbs = float(input("combustivel gasto"))
cm = (dst/cbs)
#x = cm + "km/l"
#print("x:",x)
print(round(x,3),"km/l1")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(x,3),"km/l1")
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 15:17:58) 
-- CODE:
dst = float(input("distancia:"))
cbs = float(input("combustivel gasto"))
cm = (dst/cbs)
#x = cm + "km/l"
#print("x:",x)
print(round(cm,3),"km/l1")
-- OUTPUT:
14.286 km/l1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 15:18:16) 
-- CODE:
dst = float(input("distancia:"))
cbs = float(input("combustivel gasto"))
cm = (dst/cbs)
#x = cm + "km/l"
#print("x:",x)
print(round(cm,3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 15:18:26) 
-- CODE:
dst = float(input("distancia:"))
cbs = float(input("combustivel gasto"))
cm = (dst/cbs)
#x = cm + "km/l"
#print("x:",x)
print(round(cm,3),"km/l")
-- EXECUTION TIME:
0.175144
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
